--- a/article1.html
+++ b/article1.html
@@ -4,14 +4,11 @@
         <meta charset="utf-8">
         <meta name="author" content="Hynek Kydlicek">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="styles/sidebar-layout.css">
-        <link rel="stylesheet" href="styles/sidebar-article.css">
-        <link rel="stylesheet" href="styles/header-return.css">
-        <link rel="stylesheet" href="styles/footer-creator.css">
-        <link rel="stylesheet" href="styles/article-full.css">
-        <link rel="stylesheet" href="styles/button.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="sidebar-layout.css">
+        <link rel="stylesheet" href="sidebar-article.css">
+        <link rel="stylesheet" href="header-return.css">
+        <link rel="stylesheet" href="article-full.css">
+        <link rel="stylesheet" href="button.css">
         <title>AI article</title>
     </head>
     <body>
@@ -28,7 +25,12 @@
                 <ol id="overview-begin">
                     <li><a href="article1.html#AI-overview">AI overview</a></li>
                     <li><a href="article1.html#History">History</a></li>
-                    <li><a href="article1.html#Basics">Basics</a></li>
+                    <li><a href="article1.html#Basics">Basics</a>
+                        <ol>
+                            <li>Part 1</li>
+                            <li>Part 2</li>
+                        </ol>
+                    </li>
                 </ol>
             </div>
         </aside>
