--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,10 @@
         <meta charset="utf-8">
         <meta name="author" content="Hynek Kydlicek">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="styles/content-layout.css">
-        <link rel="stylesheet" href="styles/button.css">
-        <link rel="stylesheet" href="styles/gallery.css">
-        <link rel="stylesheet" href="styles/header-return.css">
-        <link rel="stylesheet" href="styles/footer-creator.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="content-layout.css">
+        <link rel="stylesheet" href="button.css">
+        <link rel="stylesheet" href="gallery.css">
+        <link rel="stylesheet" href="header-return.css">
         <title>Gallery</title>
     </head>
     <body>
@@ -23,44 +20,48 @@
         </header>
         <main class="gallery">
             <figure>
-                <img src="images/192x108.png" alt="192x108">
-                <figcaption>Image 192x108</figcaption>
-            </figure>
-            <figure>
-                <img src="images/300x300.png" alt="300x300">
+                <img src="300x300.png" alt="300x300">
                 <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/300x450.png" alt="300x450">
-                <figcaption>Image 300x450</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/150x150.png" alt="150x150">
-                <figcaption>Image 150x150</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/200x250.png" alt="200x250">
-                <figcaption>Image 200x150</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/210x100.png" alt="210x100">
-                <figcaption>Image 210x100</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/300x450.png" alt="300x450">
-                <figcaption>Image 300x450</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/300x450.png" alt="300x450">
-                <figcaption>Image 300x450</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/300x450.png" alt="300x450">
-                <figcaption>Image 300x450</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
             <figure>
-                <img src="images/300x450.png" alt="300x450">
-                <figcaption>Image 300x450</figcaption>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
+            </figure>
+            <figure>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
+            </figure>
+            <figure>
+                <img src="300x300.png" alt="300x300">
+                <figcaption>Image 300x300</figcaption>
             </figure>
         </main>
         <footer>
