--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
         <meta charset="utf-8">
         <meta name="author" content="Hynek Kydlicek">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="styles/sidebar-layout.css">
-        <link rel="stylesheet" href="styles/sidebar-about-me.css">
-        <link rel="stylesheet" href="styles/article-list.css">
-        <link rel="stylesheet" href="styles/footer-creator.css">
-        <link rel="stylesheet" href="styles/button.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="sidebar-layout.css">
+        <link rel="stylesheet" href="sidebar-about-me.css">
+        <link rel="stylesheet" href="article-list.css">
+        <link rel="stylesheet" href="button.css">
         <title>Articles</title>
     </head>
     <body>
