--- a/my-projects.html
+++ b/my-projects.html
@@ -4,13 +4,10 @@
         <meta charset="utf-8">
         <meta name="author" content="Hynek Kydlicek">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="styles/table.css">
-        <link rel="stylesheet" href="styles/content-layout.css">
-        <link rel="stylesheet" href="styles/button.css">
-        <link rel="stylesheet" href="styles/header-return.css">
-        <link rel="stylesheet" href="styles/footer-creator.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="table.css">
+        <link rel="stylesheet" href="content-layout.css">
+        <link rel="stylesheet" href="button.css">
+        <link rel="stylesheet" href="header-return.css">
         <title>My Projects</title>
     </head>
     <body>
