--- a/article1.html
+++ b/article1.html
@@ -28,7 +28,12 @@
                 <ol id="overview-begin">
                     <li><a href="article1.html#AI-overview">AI overview</a></li>
                     <li><a href="article1.html#History">History</a></li>
-                    <li><a href="article1.html#Basics">Basics</a></li>
+                    <li><a href="article1.html#Basics">Basics</a>
+                        <ol>
+                            <li>Part 1</li>
+                            <li>Part 2</li>
+                        </ol>
+                    </li>
                 </ol>
             </div>
         </aside>
