--- a/gallery.html
+++ b/gallery.html
@@ -20,48 +20,64 @@
         </header>
         <main class="gallery">
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
             <figure>
-                <img src="300x300.png" alt="300x300">
-                <figcaption>Image 300x300</figcaption>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
+            </figure>
+            <figure>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
+            </figure>
+            <figure>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
+            </figure>
+            <figure>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
+            </figure>
+            <figure>
+                <img src="Pierre.jpg" alt="Pierre">
+                <figcaption>Image Pierre</figcaption>
             </figure>
         </main>
         <footer>
