--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <aside>
             <div class="sidebar">
                 <div class="sidebar-me">
-                    <img src="images/Pierre.jpg" alt="Hynek Kydlicek picture">
+                    <img src="Pierre.jpg" alt="Hynek Kydlicek picture">
                     <h3>Hynek Kydlíček</h3>
                     <p>Computer science student at MFF UK.<br>
                     I am interested in AI/ML, cryptocurrency and Unix.
                     </p>
                 </div>
                 <div class="sidebar-links">
-                    <a href= "https://github.com/hynky1999">Github</a>
-                    <a href= "mailto:kydlicek.hynek@gmail.com?subject=feedbackmail" target="HK email">@</a>
+                    <a>Github</a>
+                    <a>@</a>
                 </div>
                 <div class="sidebar-locations">
                     <h3><a class="button" href="index.html">Articles</a></h3>
